--- a/.github/workflows/python-checks.yml
+++ b/.github/workflows/python-checks.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip 
           pip install flake8 yapf mypy boto3 
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
 
       - name: Checks
         working-directory: ${{ matrix.WORK_DIR }}
@@ -36,8 +36,8 @@ jobs:
             --ignore-missing-imports \
             --python-version ${{ matrix.PYTHON_VERSION }} \
             --disallow-untyped-defs \
-            --no_implicit_optional \
+            --no-implicit-optional \
             --allow-redefinition \
-            --show_error_context \
+            --show-error-context \
             --pretty \
             src
