--- a/.github/workflows/python-checks.yml
+++ b/.github/workflows/python-checks.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   checks:
-    runs-on: unbuntu-16.04
+    runs-on: ubuntu-16.04
     strategy:
       matrix:
         PYTHON_VERSION: [3.6, 3.7, 3.8]
